# parallelMPI

./: .gitignore  8-12.c  8-6.c  9-10.c  9-7.c  CMakeLists.txt  MyMPI.c  MyMPI.h  consecutive.c  gen-double-matrix.c  gen-vector.c  life  life.c  mv2.c  mybcast.c  pi.c  sieve.c  write  writeBinaryFile.c
proj1/: README.md  p1q1  p1q1.c  p1q2-1  p1q2-2  p1q2-3  p1q2-3.c  p1q3  result-big.txt  result-small.txt  run.sh
proj1/big_file/: big_100.txt
proj2/: README.md  config  p2q1  p2q1.cpp  p2q2  p2q2.cpp  p2q3  p2q3.cpp
project1/: p1q2-1.c  p1q2-2.c  p1q3.cpp  result-small.txt
project2/: p2q2.cpp  run.sh
project3/: README.md  mapper.py  reducer.py  run.sh
